--- a/sample/index.html
+++ b/sample/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>dby gms sample</title>
+  <title>gms sample</title>
   <style>
     * {
       margin: 0;
